added schedule api request

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(get_game_feed)
 export(get_player)
 export(get_player_stats)
 export(get_roster)
+export(get_schedule)
 export(get_team)
 export(get_team_stats)
 export(get_teams)
